--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,26 @@
-version: "3.7"
+version: '3.7'
 
 services:
-  mq:
-    container_name: PERSONAL_WEBSITE_mq
-    image: rabbitmq:3-alpine
-
-  db:
-    container_name: personal_website_db
-    image: postgres:12-alpine
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-
-  app:
-    container_name: personal_website_app
-    build:
-      context: .
-    ports:
-    - "8000:8000"
+  dkkundu:
     volumes:
-    - .:/PERSONAL_WEBSITE
-    command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate --noinput &&
-             python manage.py runserver 0.0.0.0:8000"
-    environment:
-      - DB_HOST=db
-      - DB_NAME=postgres
-      - DB_USER=postgres
-      - DB_PASS=postgres
-    depends_on:
-      - db
-
-  celeryworker:
-    container_name: PERSONAL_WEBSITE_celery
+      - .:/app
+      - ./static:/app/static
+      - ./media:/app/media
+    env_file:
+      - .env
     build:
       context: .
-      dockerfile: Dockerfile
-    environment:
-      - DISABLE_LOGGING=True
-      - CELERY_BROKER_URL=amqp://mq:5672/
-    command: celery worker -A PERSONAL_WEBSITE -l INFO
+    ports:
+      - "8001:8000"
+  nginx:
+    build: ./nginx
+    volumes:
+      - ./static:/app/static
+      - ./media:/app/media
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/www/certbot:/var/www/certbot
+    ports:
+      - "9001:80"
+      - "9002:443"
     depends_on:
-      - mq
-      - db
-      - app
+      - dkkundu
