add new docker settings

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,9 @@
-# now we declare our main server
 server {
     listen 80;
     server_name dkkundu.com;
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://$host:$request_uri;
     }
 
     location '/.well-known/acme-challenge' {
@@ -17,12 +16,12 @@ server {
     listen 443 ssl;
     server_name dkkundu.com;
 
-    ssl_certificate /etc/letsencrypt/live/dkkundu.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dkkundu.com/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/dkkundu.com/chain.pem;
+  ssl_certificate /etc/letsencrypt/live/dkkundu.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/dkkundu.com/privkey.pem;
+  ssl_trusted_certificate /etc/letsencrypt/live/dkkundu.com/chain.pem;
 
     location / {
-        proxy_pass http://dkkundu:8000;
+        proxy_pass http://tiger:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,3 +35,6 @@ server {
         alias /app/media/;
     }
 }
+
+
+
