--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ django-cors-headers==3.7.0
 django-dbbackup==3.3.0
 django-debug-toolbar==3.2
 django-filter==2.4.0
-django-heroku==0.3.1
+# django-heroku==0.3.1
 django-import-export==2.5.0
 django-jazzmin==2.4.5
 django-prometheus==2.1.0
